<resources>
    <string name="app_name">Gizi Guru APP</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="hello_world">Hello world!</string>
    <string name="water">Water</string>
    <string name="protein">Protein</string>
    <string name="fat">Fat</string>
    <string name="carbs">Carbs</string>
    <string name="calories">Calories</string>
    <string name="no_value">-</string>
    <string name="percentage_fulled"><b>%s%%</b>\nfulfilled</string>
    <string name="your_dailyCalories">Your daily calories \nrequirement is \n<b>%s</b> Kkal</string>
    <string name="add_meals">Add Meals</string>
    <string name="add_history_title">Add History Title</string>
    <string name="pick_date">Pick a Date</string>
    <string name="choose_meals">Choose a Meals</string>
    <string name="explore">Explore</string>
    <string name="camera">Camera</string>
    <string name="serve">How many Serve?</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="history">History</string>
    <string name="scan">Scan</string>
    <string name="image_here">Image Here</string>
    <string name="food_name">Food Name :</string>
    <string name="food_name_value">Food Name</string>
    <string name="your_meals">Your Meals</string>
    <string name="profile_name">Name : %s</string>
    <string name="profile_age">Age : %s</string>
    <string name="profile_weight">Weight : %s</string>
    <string name="profile_height">Height : %s</string>
    <string name="profile_gender">Gender : %s</string>
    <string name="profile_isPregnant">Pregnant : %s</string>
    <string name="tags">Tags: %s</string>
    <string name="logout">Logout</string>
    <string name="logout_dialog_title">Are you sure?</string>
    <string name="logout_dialog_message">You need to login again after logout</string>
    <string name="cancel">Cancel</string>
    <string name="no_data">No Data</string>
    <string name="logout_message_success">Logged out successfully</string>
    <string name="logout_message_failed">Logged out failed</string>
    <string name="makanan_image">Makanan image</string>
    <string name="icon_addmeals">Icon_addMeals</string>
    <string name="add_nmeals">Add \nMeals</string>
    <string name="icon_recipe">Icon_Recipe</string>
    <string name="recipe_nmeals">Recipe \nMeals</string>
    <string name="meal_history">Meal History</string>
    <string name="recommended_meals">Recommended Meals</string>
    <string name="meals_icons">Meals Icons</string>
    <string name="meals_name">Meals Name</string>
    <string name="date">Date</string>
    <string name="icon_dropdown">Icon_Dropdown</string>
    <string name="icon_bullet">Icon_Bullet</string>
    <string name="nutritionapps">NutritionApps</string>
    <string name="app_logo">app_logo</string>
    <string name="proteins">Protein : %s gr</string>
    <string name="fats">Fat : %s gr</string>
    <string name="carbss">Carbs : %s gr</string>
    <string name="caloriess">Calories : %s Kcal</string>
    <string name="login">Login</string>
    <string name="sign_in">SIGN IN</string>
    <string name="don_t_have_an_account_sign_up_here">Don’t have an account? <b>Sign Up here</b></string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="getting_started">Getting Started</string>
    <string name="please_sign_in_to_continue">Please Sign In to Continue</string>
    <string name="login_image">Login Image</string>
    <string name="sign_up">SIGN UP</string>
    <string name="already_have_account_sign_in">Already have account? Sign In</string>
    <string name="pregnant">Pregnant</string>
    <string name="gender">Gender</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="age">Age</string>
    <string name="input_your_information">Input your information</string>
    <string name="icon_camera">icon_camera</string>
    <string name="kcal">%s Kcal</string>
    <string name="gr">%s gr</string>
</resources>