<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_explore"
        android:icon="@drawable/search"
        android:title="@string/explore" />

    <item
        android:id="@+id/navigation_scan"
        android:icon="@drawable/baseline_photo_camera_24"
        android:title="@string/scan" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_history"
        android:title="@string/history" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/profile" />
</menu>