<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context=".ui.detailFood.DetailFoodActivity"
    android:padding="32dp">

    <ImageView
        android:id="@+id/meal_img"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/meal_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/meals_name"
        android:textSize="28sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/meal_img" />

    <TextView
        android:id="@+id/meal_cal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/caloriess"
        android:textSize="24sp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/meal_name" />

    <TextView
        android:id="@+id/meal_carb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/carbss"
        android:textSize="24sp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/meal_cal" />

    <TextView
        android:id="@+id/meal_protein"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/proteins"
        android:textSize="24sp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/meal_carb" />

    <TextView
        android:id="@+id/meal_fat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fats"
        android:textSize="24sp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/meal_protein" />

    <TextView
        android:id="@+id/meal_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tags"
        android:textSize="24sp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/meal_fat" />

</androidx.constraintlayout.widget.ConstraintLayout>