<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.scan.ScanFragment"
    android:padding="16dp"
    android:id="@+id/fragmentContainerView">

    <ImageView
        android:id="@+id/scan_image"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/img_here"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/image_here" />

    <TextView
        android:id="@+id/food_name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/food_name"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/scan_image" />

    <TextView
        android:id="@+id/food_name_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/no_value"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/food_name_text" />

    <TextView
        android:id="@+id/food_name_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_value"
        android:textAlignment="center"
        style="@style/default_text"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/food_name_value" />

    <LinearLayout
        android:id="@+id/nutrition_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/food_name_tag"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal">

        <TextView
            style="@style/default_text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:text="@string/protein" />

        <TextView
            style="@style/default_text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:text="@string/calories" />

        <TextView
            style="@style/default_text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:text="@string/carbs" />

        <TextView
            style="@style/default_text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:text="@string/fat" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/nutrition_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/nutrition_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/protein_value"
            style="@style/default_text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:text="@string/no_value" />

        <TextView
            android:id="@+id/calories_value"
            style="@style/default_text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:text="@string/no_value" />

        <TextView
            android:id="@+id/carbs_value"
            style="@style/default_text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:text="@string/no_value" />

        <TextView
            android:id="@+id/fat_value"
            style="@style/default_text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:text="@string/no_value" />
    </LinearLayout>

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_meals"
        app:layout_constraintTop_toBottomOf="@id/nutrition_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp" />

</androidx.constraintlayout.widget.ConstraintLayout>